--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,27 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+				    <execution>
+					<phase>package</phase>
+					<goals><goal>copy</goal></goals>
+					<configuration>
+					    <artifactItems>
+						<artifactItem>
+						    <groupId>com.github.jsimone</groupId>
+						    <artifactId>OvniVinosAPIRest</artifactId>
+						    <version>8</version>
+						    <destFileName>OvniVinosAPIRest.jar</destFileName>
+						</artifactItem>
+					    </artifactItems>
+					</configuration>
+				    </execution>
+				</executions>
+			    </plugin>
 		</plugins>
 	</build>
 
